@@ -1,7 +1,9 @@
 package com.judy.codesandbox;
 
 import cn.hutool.core.io.FileUtil;
+import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.WordTree;
 import com.judy.codesandbox.model.ExecuteCodeRequest;
 import com.judy.codesandbox.model.ExecuteCodeResponse;
 import com.judy.codesandbox.model.ExecuteMessage;
@@ -15,6 +17,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -23,78 +26,109 @@ import java.util.UUID;
  * @create 2023-10-16-17:38
  */
 public class JavaNativeCodeSandbox implements CodeSandbox {
-    public static final String GLOBAL_CODE_DIR_NAME = "tempCode";
-    public static final String JAVA_CLASS_NAME = "Main.java";
-    public static final long TIME_OUT = 5000l;
 
+    private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
+
+    private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+
+    private static final long TIME_OUT = 5000L;
+
+    private static final String SECURITY_MANAGER_PATH = "C:\\code\\yuoj-code-sandbox\\src\\main\\resources\\security";
+
+    private static final String SECURITY_MANAGER_CLASS_NAME = "MySecurityManager";
+
+    private static final List<String> blackList = Arrays.asList("Files", "exec");
+
+    private static final WordTree WORD_TREE;
+
+    static {
+        // 初始化字典树
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blackList);
+    }
+
+    public static void main(String[] args) {
+        JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
+        ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
+        executeCodeRequest.setInputList(Arrays.asList("1 2", "1 3"));
+//        String code = ResourceUtil.readStr("testCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
+        String code = ResourceUtil.readStr("testCode/unsafeCode/RunFileError.java", StandardCharsets.UTF_8);
+//        String code = ResourceUtil.readStr("testCode/simpleCompute/Main.java", StandardCharsets.UTF_8);
+        executeCodeRequest.setCode(code);
+        executeCodeRequest.setLanguage("java");
+        ExecuteCodeResponse executeCodeResponse = javaNativeCodeSandbox.executeCode(executeCodeRequest);
+        System.out.println(executeCodeResponse);
+    }
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
-//        System.setSecurityManager(new DefaultSecurityManager());
-        String code = executeCodeRequest.getCode();
-//        String language = executeCodeRequest.getLanguage();
+//        System.setSecurityManager(new DenySecurityManager());
+
         List<String> inputList = executeCodeRequest.getInputList();
+        String code = executeCodeRequest.getCode();
+        String language = executeCodeRequest.getLanguage();
+
+        //  校验代码中是否包含黑名单中的命令
+//        FoundWord foundWord = WORD_TREE.matchWord(code);
+//        if (foundWord != null) {
+//            System.out.println("包含禁止词：" + foundWord.getFoundWord());
+//            return null;
+//        }
+
+//        1. 把用户的代码保存为文件
 
         String userDir = System.getProperty("user.dir");
-        // tempCode目录
-        String CodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
-        if (FileUtil.exist(CodePathName)) {
-            FileUtil.mkdir(CodePathName);
+        String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
+        // 判断全局代码目录是否存在，没有则新建
+        if (!FileUtil.exist(globalCodePathName)) {
+            FileUtil.mkdir(globalCodePathName);
         }
-        // UUID目录
-        String userCodePathName = CodePathName + File.separator + UUID.randomUUID().toString();
-        // Main.java 路径
-        String userCodePath = userCodePathName + File.separator + JAVA_CLASS_NAME;
-        //1.保存为文件
-        File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
-        //文件父路径
-        String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
-        System.out.println("CodePathName: " + CodePathName);
-        System.out.println("userCodePathName" + userCodePathName);
-        System.out.println("userCodePath" + userCodePath);
-        System.out.println("userCodeParentPath" + userCodeParentPath);
 
-//        ProcessBuilder processBuilder = new ProcessBuilder();
-//        processBuilder.command("ping www.baidu.com");
-        //2.编译
-        String compileCMD = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
+        // 把用户的代码隔离存放
+        String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
+        String userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
+        File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
+
+//        2. 编译代码，得到 class 文件
+        String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
         try {
-            Process compileProcess = Runtime.getRuntime().exec(compileCMD);
+            Process compileProcess = Runtime.getRuntime().exec(compileCmd);
             ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
             System.out.println(executeMessage);
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            return getErrorResponse(e);
         }
-        //3.执行
+
+        // 3. 执行代码，得到输出结果
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
-            String runCMD = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodePathName, inputArgs);
+//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
             try {
-                Process runProcess = Runtime.getRuntime().exec(runCMD);
-                //超时控制
-                new Thread(()->{
+                Process runProcess = Runtime.getRuntime().exec(runCmd);
+                // 超时控制
+                new Thread(() -> {
                     try {
                         Thread.sleep(TIME_OUT);
+                        System.out.println("超时了，中断");
                         runProcess.destroy();
                     } catch (InterruptedException e) {
                         throw new RuntimeException(e);
                     }
                 }).start();
-
-                ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "执行");
-                executeMessageList.add(executeMessage);
+                ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
+//                ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
                 System.out.println(executeMessage);
+                executeMessageList.add(executeMessage);
             } catch (Exception e) {
-                throw new RuntimeException(e);
+                return getErrorResponse(e);
             }
-
         }
 
-        //4. 整理为输出对象
+//        4. 收集整理输出结果
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
         // 取用时最大值，便于判断是否超时
-        // todo 扩展为每个用例都记录时间和内存
         long maxTime = 0;
         for (ExecuteMessage executeMessage : executeMessageList) {
             String errorMessage = executeMessage.getErrorMessage();
@@ -119,15 +153,30 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         judgeInfo.setTime(maxTime);
         // 要借助第三方库来获取内存占用，非常麻烦，此处不做实现
 //        judgeInfo.setMemory();
+
         executeCodeResponse.setJudgeInfo(judgeInfo);
 
-        //5.文件清理
+//        5. 文件清理
         if (userCodeFile.getParentFile() != null) {
-            FileUtil.del(userCodePath);
+            boolean del = FileUtil.del(userCodeParentPath);
+            System.out.println("删除" + (del ? "成功" : "失败"));
         }
+        return executeCodeResponse;
+    }
 
-        //错误处理
-
-        return null;
+    /**
+     * 获取错误响应
+     *
+     * @param e
+     * @return
+     */
+    private ExecuteCodeResponse getErrorResponse(Throwable e) {
+        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
+        executeCodeResponse.setOutputList(new ArrayList<>());
+        executeCodeResponse.setMessage(e.getMessage());
+        // 表示代码沙箱错误
+        executeCodeResponse.setStatus(2);
+        executeCodeResponse.setJudgeInfo(new JudgeInfo());
+        return executeCodeResponse;
     }
 }
